# 2026_tft_japan_demo

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  snowflake.yml.example  streamlit_app.py  streamlit_app_sis.py
data/: monthly_sales.csv  setup.sql
